# OOPProject

./: CMakeLists.txt  main.cpp
Google_tests/: CMakeLists.txt  ChordTest.cpp  RandomGeneratorsTest.cpp  SongTest.cpp
Stuffs/: Artist.cpp  Artist.h  AudioRecording.cpp  AudioRecording.h  Chord.cpp  Chord.h  JsonHelper.cpp  JsonHelper.h  Manelist.cpp  Manelist.h  Menu.cpp  Menu.h  Note.cpp  Note.h  Podcast.cpp  Podcast.h  RandomHelper.cpp  RandomHelper.h  Song.cpp  Song.h  Sound.cpp  Sound.h  TraditionalSong.cpp  TraditionalSong.h
res/: manele.json
